Update bleach dependency in response to security vulnerability

--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ pynvim = "*"
 torch = "*"  # Project dependencies
 matplotlib = "*"
 numpy = "*"
+bleach = ">=3.1.1"
 
 [requires]
 python_version = "3.8"
